; ModuleID = '/home/carl/AnghaBench/jq/src/extr_jv_dtoa.c_Bfree.c'
source_filename = "/home/carl/AnghaBench/jq/src/extr_jv_dtoa.c_Bfree.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dtoa_context = type { %struct.TYPE_3__** }
%struct.TYPE_3__ = type { i64, %struct.TYPE_3__* }

@Kmax = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.dtoa_context*, %struct.TYPE_3__*)* @Bfree to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @Bfree(%struct.dtoa_context* %0, %struct.TYPE_3__* %1) #0 {
  %3 = alloca %struct.dtoa_context*, align 8
  %4 = alloca %struct.TYPE_3__*, align 8
  store %struct.dtoa_context* %0, %struct.dtoa_context** %3, align 8
  store %struct.TYPE_3__* %1, %struct.TYPE_3__** %4, align 8
  %5 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %6 = icmp ne %struct.TYPE_3__* %5, null
  br i1 %6, label %7, label %37

7:                                                ; preds = %2
  %8 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %9 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = load i64, i64* @Kmax, align 8
  %12 = icmp ugt i64 %10, %11
  br i1 %12, label %13, label %17

13:                                               ; preds = %7
  %14 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %15 = bitcast %struct.TYPE_3__* %14 to i8*
  %16 = call i32 @free(i8* %15)
  br label %36

17:                                               ; preds = %7
  %18 = load %struct.dtoa_context*, %struct.dtoa_context** %3, align 8
  %19 = getelementptr inbounds %struct.dtoa_context, %struct.dtoa_context* %18, i32 0, i32 0
  %20 = load %struct.TYPE_3__**, %struct.TYPE_3__*** %19, align 8
  %21 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %22 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %21, i32 0, i32 0
  %23 = load i64, i64* %22, align 8
  %24 = getelementptr inbounds %struct.TYPE_3__*, %struct.TYPE_3__** %20, i64 %23
  %25 = load %struct.TYPE_3__*, %struct.TYPE_3__** %24, align 8
  %26 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %27 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %26, i32 0, i32 1
  store %struct.TYPE_3__* %25, %struct.TYPE_3__** %27, align 8
  %28 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %29 = load %struct.dtoa_context*, %struct.dtoa_context** %3, align 8
  %30 = getelementptr inbounds %struct.dtoa_context, %struct.dtoa_context* %29, i32 0, i32 0
  %31 = load %struct.TYPE_3__**, %struct.TYPE_3__*** %30, align 8
  %32 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %33 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %32, i32 0, i32 0
  %34 = load i64, i64* %33, align 8
  %35 = getelementptr inbounds %struct.TYPE_3__*, %struct.TYPE_3__** %31, i64 %34
  store %struct.TYPE_3__* %28, %struct.TYPE_3__** %35, align 8
  br label %36

36:                                               ; preds = %17, %13
  br label %37

37:                                               ; preds = %36, %2
  ret void
}

declare dso_local i32 @free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
